# hashboard

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bun.lockb  eslint.config.js  hacs.json  index.html  package-lock.json  package.json  repository.yaml  vite.config.ts
.github/workflows/: auto-release.yml  ci.yml  release.yml  test-build.yml
blisspoint-addon/: DOCS.md  config.yaml
custom_components/blisspoint/: config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/hashboard/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
hashboard-addon/: DOCS.md  config.yaml
proxy-rs/: Cargo.toml  MAPPING.md
proxy-rs/src/: main.rs  map.rs
public/: site.webmanifest
sdk-build/: index.ts  interfaces.ts  main.ts  package-lock.json  package.json  tsconfig.json
sdk-build/manifest/: i18n.ts  index.ts
sdk-build/versions/: current.ts
server/: proxy.cjs  serve.cjs
src/: index.css
src/components/: MinerSwitcher.tsx  PasswordDialog.tsx  PowerSlider.tsx  Readout.tsx  SettingsDialog.tsx
src/lib/: axis.ts  minerApi.ts  power.ts  status.ts  types.ts
src/pages/: Index.tsx
src/store/: miners.ts
src/test/: axis.test.ts  power.test.ts
startos/: README.md  instructions.md  interfaces.ts  main.ts  manifest.yaml
startos/fileModels/: README.md
startos/manifest/: index.ts
startos/versions/: current.ts  index.ts  v0_4_2.ts  v0_4_7.ts  v0_5_0.ts  v0_5_2.ts
umbrel/: README.md
umbrel/blisspoint/: docker-compose.yml  umbrel-app.yml
(+4 files in other folders)
