[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proxy-rs"
path = "src/main.rs"

[dependencies]
asic-rs = { version = "0.7.2", features = [
    "antminer",
    "braiins",
    "whatsminer",
    "avalonminer",
    "luxminer",
    "vnish",
    "bitaxe",
    "epic",
    "marathon",
    "auradine",
    "futurebit",
    "nerdaxe",
    "sealminer",
] }
asic-rs-core = "0.7.2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
futures = "0.3"
measurements = "0.11"
anyhow = "1"

[dev-dependencies]
axum-test = "17"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
